# Computer-Vision

./: .gitignore  .gitmodules  README.md  TODO.txt  isNude.cpp  main.cpp  main.py  picinpic.cpp  sobel.cpp
GAN/: README.md  sgan.py
HandTracker/: CV.py  data.py  labels.txt  train.py
ImageSegmentation/: create_mask.cpp  main.py
build-experm-Desktop-Debug/: Makefile  experm
cursor_controll/: CMakeLists.txt  README.md
education/: align.py  aplha_formula.py  heatmap.py  memoryDataCaffe.cpp  neus_tracker.py  optical_flow_alghs.cpp  read_transparent_png.py  skin.py  skin_contours.py  task.cpp
experm/: experm.pro  main.cpp
face-Bag/: README.md  main.py
goturn/: boundinbox.cpp  boundinbox.h  helper.cpp  helper.h  main.cpp  main.cpp.autosave  model_goturn.prototxt  regressor.cpp  regressor.h  test_task.pro
hand_test/: CV.py  README.md  main.py  model.py
regulaTest/: CMakeLists.txt  ThreadPool.h  face_detector.cpp  face_detector.h
regulaTest/final/: CMakeLists.txt  main.cpp
skeleton_tracker/build-skeleton_tracker-Desktop-Debug/: Makefile  skeleton_tracker
skeleton_tracker/skeleton_tracker/: main.cpp  point_finder.cpp  point_finder.h  skeleton_tracker.pro
uneg_segmentation/: train_infinite_generator.py  unet_512_model.py
